[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "advanced-mri"
version = "0.1.0"
description = "Advanced MRI processing tools for CLARiTI and SCAN workflows"
requires-python = ">=3.12"
dependencies = [
    "flywheel-sdk>=21.3.0",
    "pydicom>=3.0.1",
    "fw-client>=0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["ImageUploading", "QSMxT"]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
select = ["A", "B", "BLE", "D", "E", "W", "F", "I", "RUF", "SIM", "C90", "PLW0406", "COM818", "SLF001"]
ignore = ["D203", "D213"]  # Use D211 (no-blank-line-before-class) and D212 (multi-line-summary-first-line)

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.pytest.ini_options]
testpaths = ["ImageUploading/tests", "QSMxT/tests"]
python_files = ["test_*.py"]
addopts = [
    "--cov=ImageUploading",
    "--cov=QSMxT", 
    "--cov-report=html",
    "--cov-report=term-missing"
]
